# tanstack-pydantic-ai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/backend/: __init__.py  demo_agent.py  demo_server.py  server.py  uiadapter_server.py
examples/frontend/: package-lock.json  package.json  verify.mjs
src/tanstack_pydantic_ai/: __init__.py  chunks.py  server.py  sse.py  store.py  streaming.py
src/tanstack_pydantic_ai/adapter/: __init__.py  _adapter.py  _event_stream.py  request_types.py
src/tanstack_pydantic_ai/functional/: __init__.py  streaming.py
src/tanstack_pydantic_ai/shared/: __init__.py  chunks.py  sse.py  store.py
src/tanstack_pydantic_ai/ui/: __init__.py
src/tanstack_pydantic_ai/ui/tanstack/: __init__.py  _adapter.py  _event_stream.py  request_types.py
